--- a/index.html
+++ b/index.html
@@ -89,12 +89,19 @@
     }
 
     async function getUserProfile() {
-      
+      const profile = await liff.getProfile()
+      document.getElementById("pictureUrl").src=profile.pictureUrl
+      document.getElementById("userId").append(profile.userId)
+      document.getElementById("statusMessage").append(profile.statusMessage)
+      document.getElementById("displayName").append(profile.displayName)
+      document.getElementById("decodedIDToken").append(liff.getDecodedIDToken().email)
+
 
     }
 
     function getEnvironment() {
       document.getElementById("os").append(liff.getOS())
+      document.getElementById("language").append(liff.getLanguage())
       document.getElementById("version").append(liff.getVersion());
       document.getElementById("accessToken").append(liff.getAccessToken());
       document.getElementById("isInClient").append(liff.isInClient());
@@ -103,6 +110,7 @@
     async function main() {
       await liff.init({ liffId: "1655892312-YWjP2Kmx" })
       getEnvironment()
+      getUserProfile()
     }
     main()
   </script>
